--- a/pages/publications/2022_rvtr.md
+++ b/pages/publications/2022_rvtr.md
@@ -6,7 +6,7 @@ conference: "Frontiers in Physiology"
 year: "2022"
 link: "https://www.frontiersin.org/journals/physiology/articles/10.3389/fphys.2022.908552/full"
 image:
-  src: "rvtr.jpg"
+  src: "2022_rvtr.jpg"
   alt: Results Highlight
 ---
 
