--- a/pages/publications/2022_rvtr.md
+++ b/pages/publications/2022_rvtr.md
@@ -1,10 +1,12 @@
 ---
+layout: publication
 title: "All Roads Lead to Rome: Diverse Etiologies of Tricuspid Regurgitation Create a Predictable Constellation of Right Ventricular Shape Changes"
 authors: "Benjamin A. Orkild, Brian Zenger*, Krithika Iyer*,
 Lindsay C. Rupp, Masjid M. Ibrahim, Atefeh G. Khashani, Maura D. Perez, Markus D. Foote, Jake A. Bergquist, Alan K. Morris, Shireen Elhabian and others"
 conference: "Frontiers in Physiology"
 year: "2022"
-link: "https://www.frontiersin.org/journals/physiology/articles/10.3389/fphys.2022.908552/full"
+links: 
+  publisher: "https://www.frontiersin.org/journals/physiology/articles/10.3389/fphys.2022.908552/full"
 image:
   src: "2022_rvtr.jpg"
   alt: Results Highlight
