Add publication tags

--- a/pages/publications/2022_rvtr.md
+++ b/pages/publications/2022_rvtr.md
@@ -10,6 +10,7 @@ links:
 image:
   src: "2022_rvtr.jpg"
   alt: Results Highlight
+tags: ["SSM"]
 ---
 
 # All Roads Lead to Rome: Diverse Etiologies of Tricuspid Regurgitation Create a Predictable Constellation of Right Ventricular Shape Changes
